# NumCuts

./: CMakeLists.txt  NumCuts.cpp  README.md  main.cpp  move_to_startup.bat  package-lock.json  package.json  referencecode_keylogger.cpp  reload.bat
src/: index.html  index.js
src/css/: styles.css
src/js/: filesystem.js
